[package]
name = "debian-pkg-deps"
version = "0.1.0"
authors = ["Mingwei Zhang <mingwei@caida.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "1.3.0"
regex = "1"
lazy_static = "1"
csv="1"
serde = { version = "1.0", features = ["derive"] }
clap= "3.0.0-beta.1"
